# midnight-C

./: .gitignore  API_REFERENCE.md  ARCHITECTURAL_PATTERNS_FROM_CARDANO_C.md  BLOCKCHAIN_CONNECTION_RESEARCH.md  BUILD_AND_DEPLOYMENT_GUIDE.md  CARDANO_C_API_REFERENCE.md  CARDANO_C_INTEGRATION.md  CMakeLists.txt  CMakeLists_Phase4E.txt  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIDNIGHT_ADDRESS_FORMAT_CODE_EXAMPLES.md  MIDNIGHT_ADDRESS_FORMAT_INDEX.md  MIDNIGHT_ADDRESS_FORMAT_QUICK_REFERENCE.md  MIDNIGHT_ADDRESS_FORMAT_RESEARCH.md  MIDNIGHT_ADDRESS_FORMAT_TECHNICAL_SPEC.md  MIDNIGHT_BLOCKCHAIN.md  MIDNIGHT_DEEP_RESEARCH.md  MIDNIGHT_NETWORK_CONFIG.md  MIDNIGHT_OFFICIAL_RESEARCH.md  MIDNIGHT_PREPROD_TEST_GUIDE.md  MIDNIGHT_SDK_COMPLETE.md  MIDNIGHT_WALLET_ADDRESS_RESEARCH.md  MidnightPreprodConfig.ts  MidnightPreprodTest.ts  PHASE1B_REAL_NETWORK.md  PHASE1_4_PROGRESS_REPORT.md  PHASE1_RPC_IMPLEMENTATION.md  PHASE2_COMPLETION_CHECKLIST.md  PHASE2_COMPLETION_REPORT.md  PHASE2_FILE_REFERENCE.md  PHASE2_HTTP_IMPLEMENTATION.md  PHASE2_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_REAL_CRYPTOGRAPHY.md  PHASE4A_FILE_STRUCTURE.md  PHASE4A_SUMMARY.md  PHASE4A_ZK_PROOF_TYPES.md  PHASE4B_PRIVATE_STATE_MANAGEMENT.md  (+100 more)
.cache/official-wallet-state/: preprod-819fef85d091f24c831a0b12.json  undeployed-43ac798e08df916c0bc3e036.json  undeployed-a174f6ea3f6e3f4b044fdcd8.json
build_linux_clean/: CTestTestfile.cmake
build_linux_walletmgr/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja
build_ninja/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja
build_ninja_cppfix/: .ninja_deps  .ninja_log  build.ninja
build_verify/: CTestTestfile.cmake  midnight.slnx
cmake/: midnight.pc.in  midnightConfig.cmake.in
docs/: ARCHITECTURE.md  CARDANO_C_REFERENCE_ALIGNMENT.md  GETTING_STARTED.md  MACHINE_HANDOFF.md  MIDNIGHT_API_REFERENCE.md  MIDNIGHT_CXX_SDK_CONTEXT.md  MIDNIGHT_RESEARCH_PATCHES.md  MIDNIGHT_UTXO_PROTOCOL.md  OFFICIAL_SDK_BRIDGE.md  SDK_SPEC.md  midnight_graphql_queries.md
examples/: CMakeLists.txt  balance_checker.cpp  blockchain_example.cpp  compact_contract_deploy_custom_example.cpp  compact_contract_deploy_undeployed_example.cpp  decode_address.cpp  e2e_transfer_night.cpp  fast_balance_checker.cpp  generate-midnight-wallet-bip39.py  generate-midnight-wallet-correct.py  generate-midnight-wallet.py  http_connectivity_test.cpp  http_example.cpp  indexer-probe.cpp  midnight-wallet-tool.cpp  mqtt_example.cpp  native_contract_interactor_example.cpp  official_sdk_bridge_example.cpp  phase3_end_to_end_example.cpp  phase4a_zk_types_example.cpp  phase4b_private_state_example.cpp  phase4c_proof_server_resilience_example.cpp  phase4d_ledger_state_sync_example.cpp  phase4e_end_to_end_voting_example.cpp  preprod_live_flow.cpp  preprod_midnight_format_check.cpp  production_transactions_example.cpp  vesting_contract_deploy_example.cpp  voting-contract.cpp  wallet-generator.cpp  wallet_generator_new.cpp  websocket-test.cpp  ws-probe.cpp
examples/contracts/hello-world/: README.md  contract.config.ts  hello.compact
golden-fixtures/: README.md
midnight-level-db/: 000005.ldb  000018.ldb  000021.ldb  000024.ldb  000029.ldb  000034.ldb  000039.ldb  LOG  LOG.old  MANIFEST-000041
npm-review/: package-lock.json  package.json
proto/: midnight.proto
src/: CMakeLists.txt
src/blockchain/: block.cpp  cardano_adapter.cpp  chain_manager.cpp  midnight_adapter.cpp  official_sdk_bridge.cpp  transaction.cpp  wallet.cpp  wallet_manager.cpp
src/codec/: scale_codec.cpp
src/compact-contracts/: compact_contracts.cpp
src/contract/: contract_manager.cpp
src/contracts/: contract_interactor.cpp
src/core/: config.cpp  logger.cpp
src/crypto/: bip340_signer.cpp  bip340_signer_verify.cpp  bls_signer.cpp  ecdsa_signer.cpp  ed25519_signer.cpp  key_encryption.cpp  merkle_tree.cpp  sr25519_signer.cpp  state_encryption.cpp
src/errors/: wallet_errors.cpp
src/ledger/: ledger_backend.cpp  transaction_builder.cpp
src/monitoring-finality/: monitoring_finality.cpp
src/network/: graphql_subscription.cpp  indexer_client.cpp  indexer_subscription.cpp  midnight_node_rpc.cpp  network_client.cpp  substrate_rpc.cpp  transaction_confirmation.cpp
src/node-connection/: node_connection.cpp
src/production/: artifact_manager.cpp  midnight_client.cpp  state_backend.cpp
src/protocols/coap/: coap_client.cpp  coap_message.cpp
src/protocols/grpc/: CMakeLists.txt  grpc_client.cpp  grpc_client.hpp  grpc_server.cpp  grpc_server.hpp
src/protocols/http/: http_client.cpp  http_request.cpp
src/protocols/mqtt/: mqtt_client.cpp  mqtt_connection.cpp  mqtt_protocol.cpp
src/protocols/websocket/: ws_client.cpp  ws_connection.cpp
src/session/: session_manager.cpp
src/signing-submission/: signing_submission.cpp
src/tx/: extrinsic_builder.cpp  midnight_transaction.cpp
src/utxo-transactions/: utxo_transactions.cpp
src/wallet/: bech32m.cpp  hd_wallet.cpp  shielded_address.cpp  transaction_balancer.cpp  wallet_facade.cpp  wallet_services.cpp
src/zk/: ledger_state_sync.cpp  private_state.cpp  proof_server_client.cpp  proof_server_resilient_client.cpp  proof_types.cpp
src/zk-proofs/: zk_proofs.cpp
tests/: CMakeLists.txt  bip340_signer_test.cpp  compact-contracts_test.cpp  contract_manager_test.cpp  ecdsa_signer_test.cpp  extrinsic_builder_test.cpp  hd_wallet_test.cpp  indexer_client_live_test.cpp  integration-testing.cpp  ledger_backend_test.cpp  monitoring-finality_test.cpp  network_config_test.cpp  node-connection_test.cpp  official_sdk_bridge_test.cpp  official_wallet_generator_integration_test.cpp  production_live_submit_test.cpp  scale_codec_test.cpp  sdk_spec_fixtures_test.cpp  signing-submission_test.cpp  substrate_rpc_test.cpp  test_core.cpp  transaction_test.cpp  utxo-transactions_test.cpp  wallet_facade_test.cpp  wallet_manager_test.cpp  wallet_test.cpp  zk-proofs_test.cpp
tools/: check_balance.ts  deploy-vesting-compact.mjs  midnight-preprod-live.sh  official-deploy-contract.mjs  official-transfer-night.mjs  official-wallet-address.mjs  publish-midnight-research.sh
(+298 files in other folders)
